K8s/rabbitmq/network-pod-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-traffic
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dispatch
    - podSelector:
        matchLabels:
          app: payment
    ports:
    - protocol: TCP
      port: 5672
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns # Allow DNS resolution 
      
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
